front end changes

--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -1,4 +1,4 @@
-.banner-img {
+/* .banner-img {
     margin-top: 60px;
   }
   
@@ -44,7 +44,7 @@
   
   .home-page .card-img-top {
     height: 300px !important;
-  }
+  } */
   /* ==================
   filters
   ============== */
