--- a/client/src/styles/AuthStyles.css
+++ b/client/src/styles/AuthStyles.css
@@ -1,116 +1,75 @@
-/* ===================================
-========= register page  */
-.form-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 70vh;
-    flex-direction: column;
-    background-color: #ffdee9;
-    background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
-  }
-  
-  .form-container form {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    padding: 20px;
-    background-color: #fff;
-  }
-  
-  .form-container form .title {
-    text-align: center;
-    margin-bottom: 15px;
-    font-weight: bold;
-    font-family: "Playfair Display", serif;
-  }
-  
-  .form-container form input {
-    border: none;
-    border-bottom: 1px solid #000;
-    border-radius: 0;
-  }
-  
-  .form-container form button {
-    border: 1px solid black;
-    border-radius: 0;
-    background-color: #000;
-    color: white;
-    width: 250px;
-  }
-  
-  .form-container form button:hover {
-    border: 1px solid black;
-    background: #000000; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to right,
-      #434343,
-      #000000
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to right,
-      #434343,
-      #000000
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  }
-  /* ===================================
-========= register page  */
-.form-container {
-  margin-top: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 70vh;
-  flex-direction: column;
-  background-color: #ffdee9;
-  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+
+.bg-image{
+  font-family:"Poppins",sans-serif;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
+  background-image:url("../components/img/login-image.png");
+  background-size:cover;
+  background-position:center;
+}
+.credentials{
+  background:transparent;
+  border:2px solid rgba(255,255,255,.2);
+  backdrop-filter:blur(5px);
+  width:420px;
+  color:white;
+  border-radius:12px;
+  padding:60px 40px;
+}
+.credentials h2{
+  font-size:36px;
+  margin-bottom:12px;
+  text-align:center;
+}
+.credentials .input-box{
+  width:100%;
+  height:50px;
+  margin:10px 0;
 }
 
-.form-container form {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  padding: 20px;
-  background-color: #fff;
+.input-box{
+  width:100%;
+  height:100%;
+  background:transparent;
+  border:none;
+  outline:none;
+  border:2px solid rgba(255, 255, 255, .2);
+  border-radius:40px;
+  font-size:16px;
+  padding:20px 45px 20px 20px;
 }
-
-.form-container form .title {
-  text-align: center;
-  margin-bottom: 15px;
-  font-weight: bold;
-  font-family: "Playfair Display", serif;
+.input-box::placeholder{
+  color:white;
 }
-
-.form-container form input {
-  border: none;
-  border-bottom: 1px solid #000;
-  border-radius: 0;
+.credentials .remember-forgot{
+  display:flex;
+  justify-content:space-between;
+  font-size:14.5px;
+  margin:25px 20px;
 }
-
-.form-container form button {
-  border: 1px solid black;
-  border-radius: 0;
-  background-color: #000;
-  color: white;
-  width: 250px;
+.remember-forgot label input{
+  accent-color:white;
+  margin-right:3px;
 }
-
-.form-container form button:hover {
-  border: 1px solid black;
-  background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #434343,
-    #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #434343,
-    #000000
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.remember-forgot a{
+  color:white;
+  text-decoration:none;
 }
-
-.forgot-btn {
-  background-color: #434343a4 !important;
-  border: 0 !important;
+.remember-forgot a:hover{
+  text-decoration:underline;
 }
-
-.forgot-btn:hover {
-  color: white !important;
+.credentials .but{
+  width:100%;
+  height:45px;
+  background:white;
+  border:none;
+  outline:none;
+  border-radius:40px;
+  box-shadow: 0 0 10px rgba(0,0,0, .1);
+  cursor:pointer;
+  font-size:16px;
+  color:#333;
+  font-weight:600;
 }
