--- a/client/src/App.css
+++ b/client/src/App.css
@@ -204,21 +204,23 @@ section {
 /*--------------------------------------------------------------
 # Desktop Navigation
 --------------------------------------------------------------*/
-  .navbar{
+  .navbar_2{
     width:100%;
     height:60px;
     margin:0 auto;
     display:flex;
     align-items:center;
+    padding: 2%;
+    margin-top: 2%;
     justify-content:space-between;
   }
 
-  .navbar .links{
+  .navbar_2 .links{
     display:flex;
     gap:2rem;
   }
-  .navbar a,
-  .navbar a:focus {
+  .navbar_2 a,
+  .navbar_2 a:focus {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -233,7 +235,7 @@ section {
     position: relative;
   }
  
-  .navbar>ul>li>a:before {
+  .navbar_2>ul>li>a:before {
     content: "";
     position: absolute;
     width: 100%;
@@ -246,20 +248,20 @@ section {
     transition: all 0.3s ease-in-out 0s;
   }
 
-  .navbar a:hover:before,
-  .navbar li:hover>a:before,
-  .navbar .active:before {
+  .navbar_2 a:hover:before,
+  .navbar_2 li:hover>a:before,
+  .navbar_2 .active:before {
     visibility: visible;
     width: 100%;
   }
 
-  .navbar a:hover,
-  .navbar .active,
-  .navbar .active:focus,
-  .navbar li:hover>a {
+  .navbar_2 a:hover,
+  .navbar_2 .active,
+  .navbar_2 .active:focus,
+  .navbar_2 li:hover>a {
     color: #fff;
   }
-  .navbar .toggle_btn{
+  .navbar_2 .toggle_btn{
     color:#fff;
     font-size:2rem;
     position:relative;
@@ -2571,3 +2573,5 @@ section {
   color:#333;
   font-weight:600;
 } */
+
+
