--- a/client/src/App.css
+++ b/client/src/App.css
@@ -206,7 +206,7 @@ section {
 --------------------------------------------------------------*/
   .navbar_2{
     width:100%;
-    height:60px;
+    height:90px;
     margin:0 auto;
     display:flex;
     align-items:center;
@@ -302,16 +302,16 @@ section {
 # Mobile Navigation
 --------------------------------------------------------------*/
 @media (max-width: 992px) {
-  .navbar .links{
+  .navbar_2 .links{
     display:none;
   }
 
-  .navbar .toggle_btn{
+  .navbar_2 .toggle_btn{
     display:block;
   }
 
   
-  .navbar .toggle_btn{
+  .navbar_2 .toggle_btn{
     color:#fff;
     font-size:1.6rem;
     position:relative;
@@ -2499,79 +2499,6 @@ section {
 .footer .footer-legal .credits a {
   color: var(--color-primary);
 }
-/* .bg-image{
-  font-family:"Poppins",sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-  background-image:url("./components/img/login-image.png");
-  background-size:cover;
-  background-position:center;
+.text-center{
+  width:max-content;
 }
-.credentials{
-  background:transparent;
-  border:2px solid rgba(255,255,255,.2);
-  backdrop-filter:blur(5px);
-  width:420px;
-  color:white;
-  border-radius:12px;
-  padding:60px 40px;
-}
-.credentials h2{
-  font-size:36px;
-  margin-bottom:12px;
-  text-align:center;
-}
-.credentials .input-box{
-  width:100%;
-  height:50px;
-  margin:10px 0;
-}
-
-.input-box{
-  width:100%;
-  height:100%;
-  background:transparent;
-  border:none;
-  outline:none;
-  border:2px solid rgba(255, 255, 255, .2);
-  border-radius:40px;
-  font-size:16px;
-  padding:20px 45px 20px 20px;
-}
-.input-box::placeholder{
-  color:white;
-}
-.credentials .remember-forgot{
-  display:flex;
-  justify-content:space-between;
-  font-size:14.5px;
-  margin:25px 20px;
-}
-.remember-forgot label input{
-  accent-color:white;
-  margin-right:3px;
-}
-.remember-forgot a{
-  color:white;
-  text-decoration:none;
-}
-.remember-forgot a:hover{
-  text-decoration:underline;
-}
-.credentials .but{
-  width:100%;
-  height:45px;
-  background:white;
-  border:none;
-  outline:none;
-  border-radius:40px;
-  box-shadow: 0 0 10px rgba(0,0,0, .1);
-  cursor:pointer;
-  font-size:16px;
-  color:#333;
-  font-weight:600;
-} */
-
-
