clear form data after adding details

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -872,7 +872,7 @@ section {
 }
 
 .testimonials .testimonial-item p {
-  font-style: italic;
+  /* font-style: italic; */
   margin: 15px auto 15px auto;
 }
 
