--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,18 @@ code {
   border-bottom: solid gray !important;
   margin-bottom:20px;
 }
+
+.card2{
+  width:550px;
+  padding:3%;
+  background:rgb(242 242 242);
+}
+
+.card2-header{
+  text-align:center;
+  font-weight:bold;
+  font-size:20px;
+}
 .list-group{
   margin-left:60px;
   margin-top:30px;
